# tf-levenberg-marquardt

./: .env  .gitignore  LICENSE  README.md  environment.yml  levenberg_marquardt.py  pyproject.toml  test_curve_fitting.py  test_mnist_classification.py  tf-levenberg-marquardt.ipynb
.cspell/: lm-dictionary.txt
examples/: curve_fitting.py  mnist_classification.py  tf_levenberg_marquardt.ipynb
src/tf_levenberg_marquardt/: __init__.py  damping.py  loss.py  model.py  training.py
