[project]
name = "tf-levenberg-marquardt"
version = "1.0.3"
description = "Tensorflow implementation of Levenberg-Marquardt training algorithm"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Fabio Di Marco", email = "fabiodimarco@hotmail.it" }]
maintainers = [
  { name = "Fabio Di Marco", email = "fabiodimarco@hotmail.it" },
]
keywords = [
  "tensorflow",
  "optimization",
  "levenberg-marquardt",
  "gauss-newton",
  "training",
  "numerical optimization",
  "nonlinear least squares",
  "second-order methods"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

dependencies = [
    "numpy>=1.22",
    "tensorflow>=2.15.0",
]

[project.urls]
"Home-page" = "https://github.com/fabiodimarco/tf-levenberg-marquardt"
"Bug Reports" = "https://github.com/fabiodimarco/tf-levenberg-marquardt/issues"
"Source" = "https://github.com/fabiodimarco/tf-levenberg-marquardt/"
